--- a/package.json
+++ b/package.json
@@ -8,15 +8,19 @@
   "license": "ISC",
   "private": false,
   "scripts": {
-    "build": "rollup -c"
+    "build": "rollup -c",
+    "cy": "cypress open",
+    "start": "sirv public"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^15.0.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
+    "cypress": "^5.0.0",
     "rollup": "^2.26.5",
     "rollup-plugin-livereload": "^1.3.0",
     "rollup-plugin-svelte": "^5.2.3",
     "rollup-plugin-terser": "^7.0.0",
+    "sirv-cli": "^1.0.6",
     "svelte": "^3.24.1"
   }
 }
