--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build": "rollup -c",
     "dev": "rollup -c -w",
     "cy": "cypress open",
-    "start": "sirv public"
+    "start": "sirv public",
+    "validate": "svelte-check"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^15.0.0",
@@ -23,5 +24,12 @@
     "rollup-plugin-terser": "^7.0.0",
     "sirv-cli": "^1.0.6",
     "svelte": "^3.24.1"
+  },
+  "dependencies": {
+    "@rollup/plugin-typescript": "^5.0.2",
+    "@tsconfig/svelte": "^1.0.10",
+    "svelte-preprocess": "^4.1.1",
+    "tslib": "^2.0.1",
+    "typescript": "^3.9"
   }
 }
