--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "rollup-plugin-svelte": "^5.2.3",
     "rollup-plugin-terser": "^7.0.0",
     "sirv-cli": "^1.0.6",
-    "svelte": "^3.24.1"
+    "svelte": "^3.24.1",
+    "svelte-check": "^1.0.23"
   },
   "dependencies": {
     "@rollup/plugin-typescript": "^5.0.2",
