test(worker): add ava as a dep

--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "dev": "rollup -c -w",
     "cy": "cypress open",
     "start": "sirv public",
-    "validate": "svelte-check"
+    "validate": "svelte-check",
+    "test": "ava"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^15.0.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
+    "ava": "^3.12.1",
     "cypress": "^5.0.0",
     "rollup": "^2.26.5",
     "rollup-plugin-livereload": "^1.3.0",
@@ -24,7 +26,8 @@
     "rollup-plugin-terser": "^7.0.0",
     "sirv-cli": "^1.0.6",
     "svelte": "^3.24.1",
-    "svelte-check": "^1.0.23"
+    "svelte-check": "^1.0.23",
+    "ts-node": "^9.0.0"
   },
   "dependencies": {
     "@rollup/plugin-typescript": "^5.0.2",
@@ -32,5 +35,13 @@
     "svelte-preprocess": "^4.1.1",
     "tslib": "^2.0.1",
     "typescript": "^3.9"
+  },
+  "ava": {
+    "extensions": [
+      "ts"
+    ],
+    "require": [
+      "ts-node/register"
+    ]
   }
 }
