--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Run tests
 on: [push]
 jobs:
 
-  "Unit tests":
+  unit-tests:
     runs-on: ubuntu-latest
     steps:
       - name: 📥  Checkout
@@ -18,7 +18,7 @@ jobs:
       - name: 🚀  Ava tests
         run: yarn run test
 
-  "End-to-end tests":
+  end-to-end-tests:
     runs-on: ubuntu-latest
     steps:
       - name: 📥  Checkout
