build(worker): move tsconfig to repository root

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "include": [
-    "**/*"
+    "src/worker/**/*",
+    "test.ts"
   ],
   "compilerOptions": {
     "lib": ["ES5", "ES6", "WebWorker"],
