build: setup paths so that tests work properly

--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "sirv-cli": "^1.0.6",
     "svelte": "^3.24.1",
     "svelte-check": "^1.0.23",
-    "ts-node": "^9.0.0"
+    "ts-node": "^9.0.0",
+    "tsconfig-paths": "^3.9.0"
   },
   "dependencies": {
     "@rollup/plugin-typescript": "^5.0.2",
@@ -41,7 +42,8 @@
       "ts"
     ],
     "require": [
-      "ts-node/register"
+      "ts-node/register",
+      "tsconfig-paths/register"
     ]
   }
 }
