--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^15.0.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
+    "@typescript-eslint/eslint-plugin": "^3.10.1",
+    "@typescript-eslint/parser": "^3.10.1",
     "ava": "^3.12.1",
     "cypress": "^5.0.0",
+    "eslint": "^7.7.0",
     "rollup": "^2.26.5",
     "rollup-plugin-livereload": "^1.3.0",
     "rollup-plugin-svelte": "^5.2.3",
