--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "ava": "^3.12.1",
     "cypress": "^5.0.0",
     "eslint": "^7.7.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "prettier": "^2.1.1",
     "rollup": "^2.26.5",
     "rollup-plugin-livereload": "^1.3.0",
     "rollup-plugin-svelte": "^5.2.3",
