--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "rollup -c",
     "cy": "cypress open",
     "dev": "rollup -c -w",
+    "fix": "eslint --fix '{src,test}/**/*.{js,ts}'",
     "lint": "eslint src/ test/",
     "start": "sirv public",
     "test": "ava",
