--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "cy": "cypress open",
     "dev": "rollup -c -w",
     "fix": "eslint --fix '{src,test}/**/*.{js,ts}'",
-    "lint": "eslint src/ test/",
+    "lint": "eslint '{src,test}/**/*.{js,ts}'",
     "start": "sirv public",
     "test": "ava",
     "validate": "svelte-check"
