--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "dependencies": {
     "@rollup/plugin-typescript": "^5.0.2",
     "@tsconfig/svelte": "^1.0.10",
+    "read-excel-file": "^4.0.7",
     "svelte-preprocess": "^4.1.1",
     "tslib": "^2.0.1",
     "typescript": "^3.9"
