--- a/package.json
+++ b/package.json
@@ -18,24 +18,24 @@
     "validate": "svelte-check"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^15.0.0",
-    "@rollup/plugin-node-resolve": "^9.0.0",
-    "@typescript-eslint/eslint-plugin": "^3.10.1",
-    "@typescript-eslint/parser": "^3.10.1",
-    "ava": "^3.12.1",
-    "cypress": "^5.0.0",
-    "eslint": "^7.7.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "prettier": "^2.1.1",
-    "rollup": "^2.26.5",
-    "rollup-plugin-livereload": "^1.3.0",
-    "rollup-plugin-svelte": "^5.2.3",
-    "rollup-plugin-terser": "^7.0.0",
-    "sirv-cli": "^1.0.6",
-    "svelte": "^3.24.1",
-    "svelte-check": "^1.0.23",
-    "ts-node": "^9.0.0",
+    "@rollup/plugin-commonjs": "15.0.0",
+    "@rollup/plugin-node-resolve": "9.0.0",
+    "@typescript-eslint/eslint-plugin": "3.10.1",
+    "@typescript-eslint/parser": "3.10.1",
+    "ava": "3.12.1",
+    "cypress": "5.0.0",
+    "eslint": "7.7.0",
+    "eslint-config-prettier": "6.11.0",
+    "eslint-plugin-prettier": "3.1.4",
+    "prettier": "2.1.1",
+    "rollup": "2.26.5",
+    "rollup-plugin-livereload": "1.3.0",
+    "rollup-plugin-svelte": "5.2.3",
+    "rollup-plugin-terser": "7.0.0",
+    "sirv-cli": "1.0.6",
+    "svelte": "3.24.1",
+    "svelte-check": "1.0.23",
+    "ts-node": "9.0.0",
     "tsconfig-paths": "^3.9.0"
   },
   "dependencies": {
