--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@typescript-eslint/parser": "3.10.1",
     "ava": "3.12.1",
     "cypress": "5.0.0",
+    "cypress-file-upload": "^4.1.1",
     "eslint": "7.7.0",
     "eslint-config-prettier": "6.11.0",
     "eslint-plugin-prettier": "3.1.4",
