--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
     "strict": true,
     "baseUrl": ".",
     "paths": {
-      "@worker/*": ["src/worker/*"]
+      "@worker/*": ["src/worker/*"],
+      "*": ["node_modules/*", "typing/*"]
     }
   }
 }
