--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   },
   "dependencies": {
     "@predictive-text-studio/lexical-model-compiler": "^14.0.0-alpha.0",
+    "dexie": "^3.0.2",
     "read-excel-file": "^4.0.7",
     "tslib": "^2.0.1"
   },
