--- a/package.json
+++ b/package.json
@@ -51,8 +51,7 @@
     "@tsconfig/svelte": "^1.0.10",
     "exceljs": "~3.5.0",
     "jszip": "^3.5.0",
-    "tslib": "^2.0.1",
-    "xlsx": "^0.16.7"
+    "tslib": "^2.0.1"
   },
   "ava": {
     "files": [
