--- a/package.json
+++ b/package.json
@@ -25,13 +25,13 @@
     "@tsconfig/svelte": "^1.0.10",
     "@typescript-eslint/eslint-plugin": "^3.10.1",
     "@typescript-eslint/parser": "^3.10.1",
-    "@tsconfig/svelte": "^1.0.10",
     "ava": "^3.12.1",
     "cypress": "5.0.0",
     "cypress-file-upload": "^4.1.1",
     "eslint": "^7.7.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
+    "fake-indexeddb": "^3.1.2",
     "husky": "^4.3.0",
     "prettier": "^2.1.1",
     "rollup": "^2.26.5",
@@ -48,9 +48,9 @@
   },
   "dependencies": {
     "@predictive-text-studio/lexical-model-compiler": "^14.0.0-alpha.0",
+    "dexie": "^3.0.2",
     "exceljs": "~3.5.0",
     "jszip": "^3.5.0",
-    "dexie": "^3.0.2",
     "tslib": "^2.0.1"
   },
   "ava": {
