feat: add type stubs for fake-indexeddb

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "baseUrl": ".",
     "paths": {
       "@worker/*": ["src/worker/*"],
-      "*": ["node_modules/*"]
+      "*": ["node_modules/*", "types/*"]
     }
   }
 }
