--- a/package.json
+++ b/package.json
@@ -48,6 +48,9 @@
   },
   "dependencies": {
     "@predictive-text-studio/lexical-model-compiler": "^14.0.0-alpha.0",
+    "@rollup/plugin-json": "^4.1.0",
+    "@types/bcp-47": "^1.0.0",
+    "bcp-47": "^1.0.7",
     "dexie": "^3.0.2",
     "exceljs": "~3.5.0",
     "jszip": "^3.5.0",
