Store interfaces that are shared between app and worker elsewhere

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     "baseUrl": ".",
     "paths": {
       "@worker/*": ["src/worker/*"],
+      "@common/*": ["src/common/*"],
       "*": ["node_modules/*", "types/*"]
     }
   }
