--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "rollup-plugin-svelte": "^5.2.3",
     "rollup-plugin-terser": "^7.0.0",
     "sirv-cli": "^1.0.6",
-    "svelte": "^3.24.1",
+    "svelte": "^3.27.0",
     "svelte-check": "^1.0.23",
     "svelte-preprocess": "^4.1.1",
     "ts-node": "^9.0.0",
@@ -51,9 +51,15 @@
     "@rollup/plugin-json": "^4.1.0",
     "@types/bcp-47": "^1.0.0",
     "bcp-47": "^1.0.7",
+    "bootstrap": "^4.5.2",
+    "bulma": "^0.9.0",
     "dexie": "^3.0.2",
     "exceljs": "~3.5.0",
     "jszip": "^3.5.0",
+    "rollup-plugin-postcss": "^3.1.8",
+    "smelte": "^1.0.15",
+    "svelma": "^0.4.0",
+    "sveltestrap": "^3.8.1",
     "tslib": "^2.0.1"
   },
   "ava": {
