--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,9 @@
     "paths": {
       "@worker/*": ["src/worker/*"],
       "*": ["node_modules/*", "types/*"]
-    }
+    },
+    "allowJs": true,
+    "noImplicitAny": false
+
   }
 }
