--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "strict": true,
     "baseUrl": ".",
     "paths": {
+      "@app/*": ["src/app/*"],
       "@worker/*": ["src/worker/*"],
       "@common/*": ["src/common/*"],
       "*": ["node_modules/*", "types/*"]
