--- a/src/worker/tsconfig.json
+++ b/src/worker/tsconfig.json
@@ -1,9 +1,5 @@
 {
   "extends": "../../tsconfig.json",
-  "include": [
-    "**/*"
-  ],
-  "exclude": [
-    "../../test"
-  ]
+  "include": ["**/*"],
+  "exclude": ["../../test"]
 }
