fix testing issue

--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "dexie": "^3.0.2",
     "exceljs": "~3.5.0",
     "jszip": "^3.5.0",
+    "svelte-routing": "1.4.0",
     "tslib": "^2.0.1"
   },
   "ava": {
