--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "dev": "rollup -c -w",
     "lint": "eslint '{src,test,cypress}/**/*.ts'",
     "lint:fix": "eslint --fix '{src,test,cypress}/**/*.ts'",
-    "prettier": "prettier --write '{src,test,cypress}/**/*.ts'",
+    "prettier": "prettier --write '{src,test,cypress}/**/*.{ts,svelte}'",
     "start": "sirv public -s",
     "test": "ava",
     "validate": "svelte-check"
@@ -37,6 +37,7 @@
     "fake-indexeddb": "^3.1.2",
     "husky": "^4.3.0",
     "prettier": "^2.1.1",
+    "prettier-plugin-svelte": "^1.4.0",
     "rollup": "^2.26.5",
     "rollup-plugin-livereload": "^1.3.0",
     "rollup-plugin-svelte": "^5.2.3",
