--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -3,10 +3,11 @@
         "target": "es5",
         "lib": [
             "es5",
-            "dom"
+            "dom",
         ],
         "types": [
-            "cypress"
+            "cypress",
+            "node",
         ]
     },
     "include": [
