--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,8 @@ jobs:
         run: yarn run validate
       - name: 🚀  Ava tests
         run: yarn run test
+      - name: ☕ Mocha test 
+        run: yarn run test:mocha
 
   end-to-end-tests:
     runs-on: ubuntu-latest
