--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "prettier": "prettier --write '{src,test,cypress}/**/*.{ts,svelte}'",
     "start": "sirv public -s",
     "test": "ava",
+    "test:mocha": "env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' mocha -r ts-node/register 'unit-test/**/*.ts'",
     "validate": "svelte-check"
   },
   "devDependencies": {
@@ -25,11 +26,14 @@
     "@rollup/plugin-typescript": "^5.0.2",
     "@tsconfig/svelte": "^1.0.10",
     "@types/bcp-47": "^1.0.0",
+    "@types/chai": "^4.2.14",
+    "@types/mocha": "^8.0.3",
     "@types/node": "^14.11.8",
     "@types/sinon": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^3.10.1",
     "@typescript-eslint/parser": "^3.10.1",
     "ava": "^3.12.1",
+    "chai": "^4.2.0",
     "cypress": "5.0.0",
     "cypress-file-upload": "^4.1.1",
     "eslint": "^7.7.0",
@@ -37,6 +41,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "fake-indexeddb": "^3.1.2",
     "husky": "^4.3.0",
+    "mocha": "^8.2.0",
     "prettier": "^2.1.1",
     "prettier-plugin-svelte": "^1.4.0",
     "rollup": "^2.26.5",
