--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "@types/bcp-47": "^1.0.0",
     "@types/chai": "^4.2.14",
     "@types/mocha": "^8.0.3",
+    "@types/nock": "^11.1.0",
     "@types/node": "^14.11.8",
+    "@types/node-fetch": "^2.5.7",
     "@types/sinon": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^3.10.1",
     "@typescript-eslint/parser": "^3.10.1",
@@ -42,6 +44,9 @@
     "fake-indexeddb": "^3.1.2",
     "husky": "^4.3.0",
     "mocha": "^8.2.0",
+    "nock": "^13.0.4",
+    "node-blob": "^0.0.2",
+    "node-fetch": "^2.6.1",
     "prettier": "^2.1.1",
     "prettier-plugin-svelte": "^1.4.0",
     "rollup": "^2.26.5",
