--- a/package.json
+++ b/package.json
@@ -16,10 +16,14 @@
     "prettier": "prettier --write '{src,test,cypress}/**/*.{ts,svelte}'",
     "start": "sirv public -s",
     "test": "ava",
+    "test:jest": "jest jest",
     "test:mocha": "env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' mocha -r ts-node/register 'unit-test/**/*.ts'",
     "validate": "svelte-check"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.3",
+    "@babel/preset-env": "^7.12.1",
+    "@babel/preset-typescript": "^7.12.1",
     "@rollup/plugin-commonjs": "^15.0.0",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
@@ -27,6 +31,7 @@
     "@tsconfig/svelte": "^1.0.10",
     "@types/bcp-47": "^1.0.0",
     "@types/chai": "^4.2.14",
+    "@types/jest": "^26.0.15",
     "@types/mocha": "^8.0.3",
     "@types/nock": "^11.1.0",
     "@types/node": "^14.11.8",
@@ -35,6 +40,7 @@
     "@typescript-eslint/eslint-plugin": "^3.10.1",
     "@typescript-eslint/parser": "^3.10.1",
     "ava": "^3.12.1",
+    "babel-jest": "^26.6.1",
     "chai": "^4.2.0",
     "cypress": "5.0.0",
     "cypress-file-upload": "^4.1.1",
@@ -43,6 +49,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "fake-indexeddb": "^3.1.2",
     "husky": "^4.3.0",
+    "jest": "^26.6.1",
     "mocha": "^8.2.0",
     "nock": "^13.0.4",
     "node-blob": "^0.0.2",
