--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "dexie": "^3.0.2",
     "exceljs": "~3.5.0",
     "jszip": "^3.5.0",
+    "karma-typescript-preprocessor": "^0.4.0",
     "svelte-routing": "^1.4.2",
     "tslib": "^2.0.1"
   },
