--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@typescript-eslint/eslint-plugin": "^3.10.1",
     "@typescript-eslint/parser": "^3.10.1",
     "ava": "^3.12.1",
+    "chai": "^4.2.0",
     "cypress": "5.0.0",
     "cypress-file-upload": "^4.1.1",
     "eslint": "^7.7.0",
@@ -37,6 +38,11 @@
     "eslint-plugin-prettier": "^3.1.4",
     "fake-indexeddb": "^3.1.2",
     "husky": "^4.3.0",
+    "karma": "^5.2.3",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-mocha": "^2.0.1",
+    "mocha": "^8.2.0",
     "prettier": "^2.1.1",
     "prettier-plugin-svelte": "^1.4.0",
     "rollup": "^2.26.5",
