--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@tsconfig/svelte": "^1.0.10",
     "@types/bcp-47": "^1.0.0",
     "@types/node": "^14.11.8",
+    "@types/node-fetch": "^2.5.7",
     "@types/sinon": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^3.10.1",
     "@typescript-eslint/parser": "^3.10.1",
@@ -38,6 +39,8 @@
     "eslint-plugin-prettier": "^3.1.4",
     "fake-indexeddb": "^3.1.2",
     "husky": "^4.3.0",
+    "nock": "^13.0.4",
+    "node-fetch": "^2.6.1",
     "prettier": "^2.1.1",
     "prettier-plugin-svelte": "^1.4.0",
     "regenerator-runtime": "^0.13.5",
