add tests for new components

--- a/src/app/tsconfig.json
+++ b/src/app/tsconfig.json
@@ -1,9 +1,6 @@
 {
   "extends": "@tsconfig/svelte/tsconfig.json",
-  "include": [
-    "../common/**/*",
-    "**/*"
-  ],
+  "include": ["../common/**/*", "**/*"],
   "compilerOptions": {
     "importHelpers": true,
     "strict": true,
