--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@typescript-eslint/eslint-plugin": "^3.10.1",
     "@typescript-eslint/parser": "^3.10.1",
     "ava": "^3.12.1",
+    "core-js-bundle": "^3.6.4",
     "cypress": "5.0.0",
     "cypress-file-upload": "^4.1.1",
     "eslint": "^7.7.0",
@@ -39,6 +40,7 @@
     "husky": "^4.3.0",
     "prettier": "^2.1.1",
     "prettier-plugin-svelte": "^1.4.0",
+    "regenerator-runtime": "^0.13.5",
     "rollup": "^2.26.5",
     "rollup-plugin-livereload": "^1.3.0",
     "rollup-plugin-svelte": "^5.2.3",
