--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "repository": "git@github.com:eddieantonio/predictive-text-studio.git",
   "author": "Eddie Antonio Santos <easantos@ualberta.ca>",
-  "license": "ISC",
+  "license": "MIT",
   "private": false,
   "scripts": {
     "build": "rollup -c",
