--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "exceljs": "~3.5.0",
     "googleapis": "^61.0.0",
     "jszip": "^3.5.0",
+    "simple-svelte-autocomplete": "^1.2.4",
     "svelte-routing": "^1.4.2",
     "tslib": "^2.0.1"
   },
