--- a/src/app/tsconfig.json
+++ b/src/app/tsconfig.json
@@ -8,7 +8,7 @@
     "baseUrl": ".",
     "paths": {
       "@common/*": ["../common/*"],
-      "*": ["node_modules/*", "types/*"]
+      "*": ["node_modules/*", "../../types/*"]
     }
   }
 }
