--- a/.env.template
+++ b/.env.template
@@ -1,7 +1,7 @@
 # NEVER commit your .env files
 #______________________________
 # Copy this file and save it as `.env` in the same directory as this file.
-# Replace the API_KEY and CLIENT_ID by following these Step 1 of these instructions:
+# Replace the API_KEY and CLIENT_ID by following Step 1 of these instructions:
 # https://developers.google.com/sheets/api/quickstart/js
 
 API_KEY= YOUR_KEY_HERE
