exporting and importing with dexie-export-import

--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "chalk": "^4.1.0",
     "comlink": "^4.3.0",
     "dexie": "^3.0.2",
+    "dexie-export-import": "^1.0.0",
     "dotenv": "^8.2.0",
     "exceljs": "~3.5.0",
     "googleapis": "^61.0.0",
