--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@typescript-eslint/parser": "^3.10.1",
     "ava": "^3.12.1",
     "core-js-bundle": "^3.6.4",
-    "cypress": "5.0.0",
+    "cypress": "~7.0.0",
     "cypress-file-upload": "^4.1.1",
     "eslint": "^7.7.0",
     "eslint-config-prettier": "^6.11.0",
